force-app/main/default/objects/b3o__Log_Entry__c/b3o__Log_Entry__c.object-meta.xml
<CustomObject>
    <label>Onboarding Log Entry</label>
    <nameField>
        <displayFormat>ONB-LOG-{0}</displayFormat>
        <label>Log Entry Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Onboarding Log Entries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>