force-app/main/default/objects/b3o__Log_Entry__c/fields/b3o__Category__c.field-meta.xml
<CustomField>
    <fullName>b3o__Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>IV - Yoti</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>