force-app/main/default/objects/b3o__Log_Entry__c/fields/b3o__Is_Auto_Created__c.field-meta.xml
<CustomField>
    <fullName>b3o__Is_Auto_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Auto Created?</label>
    <type>Checkbox</type>
</CustomField>