force-app/main/default/objects/b3o__Log_Entry__c/fields/b3o__Type__c.field-meta.xml
<CustomField>
    <fullName>b3o__Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>API</fullName>
            </value>
            <value>
                <fullName>Apex</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>