force-app/main/default/objects/b3o__Log_Entry__c/listViews/b3o__All.listView-meta.xml
<ListView>
    <fullName>b3o__All</fullName>
    <columns>NAME</columns>
    <columns>b3o__Category__c</columns>
    <columns>b3o__Type__c</columns>
    <columns>b3o__Description__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>